--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,16644],[],[[5,0,0,[],[1,502,16142],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,10011],[],[[5,0,0,[],[0,259,9749,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*EL nayya"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*EL nayya","*No keyword with name 'Search for the song' found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:10","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1720940173234;
+window.output["baseMillis"] = 1721479289929;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16665;
+window.output["generated"] = 10032;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
