modified:   log.html 	modified:   output.xml 	modified:   report.html

--- a/log.html
+++ b/log.html
@@ -1803,31 +1803,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,13588],[],[[5,0,0,[],[1,531,13054],[[0,6,0,0,0,0,0,0,[1,532,4720],[[0,7,8,0,9,10,0,11,[1,546,4705],[[546,2,12],[1104,2,13],[1716,2,14]]]]],[0,15,0,0,0,0,0,0,[1,5254,4169],[[0,16,8,0,17,18,0,19,[1,5254,575],[[5256,2,20]]],[0,16,8,0,17,21,0,19,[1,5829,591],[[5829,2,22]]],[0,23,24,0,25,26,0,0,[1,6420,3002],[[9422,2,27]]]]],[0,28,0,0,0,0,0,0,[1,9424,3619],[[0,16,8,0,17,29,0,19,[1,9426,615],[[9427,2,30]]],[0,23,24,0,25,26,0,0,[1,10041,3002],[[13043,2,27]]]]],[0,31,0,0,0,0,0,0,[1,13044,541],[[0,16,8,0,17,32,0,19,[1,13045,539],[[13046,2,33]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,3157],[],[[5,0,6,[],[0,3123,31,7],[[0,8,0,0,0,9,0,0,[0,3124,10],[[0,10,0,0,0,11,0,0,[0,3126,3],[[3127,5,7]]],[0,10,0,0,0,12,0,0,[3,3133,0],[]],[0,13,14,0,15,16,0,0,[3,3133,1],[]]]],[0,17,0,0,0,18,0,0,[3,3136,1],[]],[0,19,20,0,21,22,0,23,[3,3137,1],[]],[0,24,0,0,0,25,0,0,[3,3141,0],[]],[0,19,20,0,21,26,0,23,[3,3142,0],[]],[0,24,0,0,0,27,0,0,[3,3146,1],[]],[0,19,20,0,21,28,0,23,[3,3148,0],[]],[0,29,0,0,0,30,0,0,[3,3149,1],[]],[0,31,0,0,0,32,0,0,[3,3153,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*Open Spotify desktop application and play a song","*Open the Spotify desktop application","*Windows Search","*RPA.Windows","*<p>Use Windows search window to launch application.\x3c/p>","*Spotify","*window","*Sending keys '{Win}' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Sending keys 'Spotify' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Sending keys '{Enter}' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Search for the song","*Send Keys","*<p>Send keys to desktop, current window or to Control element defined by given locator.\x3c/p>","*keys={CTRL}l","*action, keyboard","*Sending keys '{CTRL}l' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*keys=${SONG_NAME}","*Sending keys 'Amira' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*Select the song","*keys={ENTER}{TAB}{ENTER}","*Sending keys '{ENTER}{TAB}{ENTER}' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Play the song","*keys={ENTER}","*Sending keys '{ENTER}' to element &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_09529949\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*Open EGX X-stream Workstation and Login","*<p>Open the EGX X-stream Workstation app and login.\x3c/p>","*No keyword with name 'Press Keys' found.","*Open Application","*${APP_NAME}","*Press Keys","*win, text=${app_name}","*enter","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Wait Until Application Is Ready","*${APP_NAME}, timeout=10s","*Click","*RPA.Windows","*<p>Mouse click on element matching given locator.\x3c/p>","*locator=type_in_your_username_locator","*action, mouse","*Type Text","*locator=type_in_your_username_locator, text=your_username","*locator=type_in_your_password_locator","*locator=type_in_your_password_locator, text=your_password","*locator=login_button_locator","*Wait Until Page Contains Element","*locator=dashboard_locator, timeout=10s","*Capture Screenshot","*login_successful.png"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721555869638;
+window.output["baseMillis"] = 1721556850847;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13608;
+window.output["generated"] = 3173;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
