--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,3157],[],[[5,0,6,[],[0,3123,31,7],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,12287],[],[[5,0,6,[],[0,889,11397,7],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*Open EGX X-stream Workstation and Login","*<p>Open the EGX X-stream Workstation app and login.\x3c/p>","*No keyword with name 'Press Keys' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*Open EGX X-stream Workstation and Login","*<p>Open the EGX X-stream Workstation app and login.\x3c/p>","*ElementNotFound: Element not found with locator 'win'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:12","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721556850847;
+window.output["baseMillis"] = 1721559346311;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3173;
+window.output["generated"] = 12303;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
