modified:   conda.yaml 	modified:   log.html 	modified:   output.xml 	modified:   report.html 	modified:   tasks.robot

--- a/log.html
+++ b/log.html
@@ -1803,31 +1803,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,12287],[],[[5,0,6,[],[0,889,11397,7],[[0,8,0,0,0,9,0,0,[0,890,11375],[[0,10,11,0,12,13,0,14,[0,891,11370],[[891,2,15],[1055,2,16],[1055,2,17],[12188,2,18],[12189,5,7]]],[0,19,0,0,0,20,0,0,[3,12264,1],[]],[0,21,22,0,23,24,0,0,[3,12265,0],[]]]],[0,25,0,0,0,26,0,0,[3,12268,0],[]],[0,27,11,0,28,29,0,30,[3,12269,0],[]],[0,31,0,0,0,32,0,0,[3,12273,0],[]],[0,27,11,0,28,33,0,30,[3,12274,0],[]],[0,31,0,0,0,34,0,0,[3,12277,0],[]],[0,27,11,0,28,35,0,30,[3,12277,0],[]],[0,36,0,0,0,37,0,0,[3,12280,0],[]],[0,38,0,0,0,39,0,0,[3,12284,0],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,1311],[],[[4,0,5,[],[0,1279,29,6],[[0,7,0,0,0,8,0,0,[0,1280,8],[[0,9,10,0,11,12,0,0,[0,1281,5],[[1283,5,6]]],[0,9,10,0,11,13,0,0,[3,1286,0],[]],[0,14,15,0,16,17,0,0,[3,1286,1],[]]]],[0,18,0,0,0,8,0,0,[3,1289,0],[]],[0,19,20,0,21,22,0,23,[3,1290,0],[]],[0,24,0,0,0,25,0,0,[3,1293,0],[]],[0,19,20,0,21,26,0,23,[3,1294,0],[]],[0,24,0,0,0,27,0,0,[3,1297,1],[]],[0,19,20,0,21,28,0,23,[3,1298,1],[]],[0,29,0,0,0,30,0,0,[3,1303,0],[]],[0,31,0,0,0,32,0,0,[3,1306,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify desktop application, searches for the given song, and plays the song. Demonstrates the basic Windows automation capabilities of the RPA Framework.\x3c/p>","*Open EGX X-stream Workstation and Login","*<p>Open the EGX X-stream Workstation app and login.\x3c/p>","*ElementNotFound: Element not found with locator 'win'","*Open Application","*${APP_NAME}","*Send Keys","*RPA.Windows","*<p>Send keys to desktop, current window or to Control element defined by given locator.\x3c/p>","*win, text=${app_name}","*action, keyboard","*Getting element with locator: win","*Resulted root element: WindowsElement(item=&lt;uiautomation.uiautomation.PaneControl object at 0x000002281349BBE0&gt;, locator=None, name='Desktop 1', automation_id='', control_type='PaneControl', class_name='#32769', left=0, right=1920, top=0, bottom=1080, width=1920, height=1080, xcenter=960, ycenter=540)","*Locator 'win' produced matcher: MatchObject(locators=[('Name', 'win', 0)], _classes=set(), max_level=0)","*2024-07-21 13:55:58.498 locators.py[267] _get_control_from_params -&gt; Find Control Timeout(10s): {Name: 'win'}","*Press Keys","*enter","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Wait Until Application Is Ready","*${APP_NAME}, timeout=10s","*Click","*<p>Mouse click on element matching given locator.\x3c/p>","*locator=type_in_your_username_locator","*action, mouse","*Type Text","*locator=type_in_your_username_locator, text=your_username","*locator=type_in_your_password_locator","*locator=type_in_your_password_locator, text=your_password","*locator=login_button_locator","*Wait Until Page Contains Element","*locator=dashboard_locator, timeout=10s","*Capture Screenshot","*login_successful.png"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*Open EGX X-stream Workstation and Login","*<p>Open the EGX X-stream Workstation app and login.\x3c/p>","*ValueError: Invalid key: win","*Open Application","*${APP_NAME}","*Press Keys","*RPA.Desktop","*<p>Press multiple keys down simultaneously.\x3c/p>","*win, text=${app_name}","*enter","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Wait Until Window Is Ready","*Click","*RPA.Windows","*<p>Mouse click on element matching given locator.\x3c/p>","*locator=type_in_your_username_locator","*action, mouse","*RPA.Windows.Type Text","*locator=type_in_your_username_locator, text=your_username","*locator=type_in_your_password_locator","*locator=type_in_your_password_locator, text=your_password","*locator=login_button_locator","*RPA.Windows.Wait Until Page Contains Element","*locator=dashboard_locator, timeout=10s","*RPA.Desktop.Capture Screenshot","*login_successful.png"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:12","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721559346311;
+window.output["baseMillis"] = 1721560399213;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12303;
+window.output["generated"] = 1324;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
