modified:   log.html 	modified:   output.xml 	modified:   report.html

--- a/log.html
+++ b/log.html
@@ -1806,31 +1806,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,2179],[],[[4,0,0,[],[0,2148,28,5],[[0,6,0,0,0,7,0,0,[0,2150,6],[[0,8,9,0,10,11,0,0,[0,2150,4],[[2150,5,5]]],[0,8,9,0,10,12,0,0,[3,2155,1],[]]]],[0,13,0,0,0,7,0,0,[3,2157,0],[]],[0,14,0,0,0,15,0,0,[3,2160,0],[]],[0,16,9,0,17,18,0,0,[3,2161,0],[]],[0,14,0,0,0,19,0,0,[3,2163,2],[]],[0,16,9,0,17,20,0,0,[3,2165,1],[]],[0,14,0,0,0,21,0,0,[3,2169,0],[]],[0,22,0,0,0,23,0,0,[3,2171,0],[]],[0,24,0,0,0,25,0,0,[3,2175,0],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,16843],[],[[5,0,0,[],[1,437,16403],[[0,6,0,0,0,0,0,0,[1,439,8055],[[0,7,8,0,9,10,0,11,[1,439,5053],[[440,2,12],[992,2,13],[1952,2,14]]],[0,15,16,0,17,18,0,0,[1,5492,3002],[[8494,2,19]]]]],[0,20,0,0,0,0,0,0,[1,8494,4188],[[0,21,8,0,22,23,0,24,[1,8496,562],[[8496,2,25]]],[0,21,8,0,22,26,0,24,[1,9058,609],[[9060,2,27]]],[0,15,16,0,17,18,0,0,[1,9668,3013],[[12681,2,19]]]]],[0,28,0,0,0,0,0,0,[1,12682,3611],[[0,21,8,0,22,29,0,24,[1,12682,596],[[12684,2,30]]],[0,15,16,0,17,18,0,0,[1,13278,3013],[[16291,2,19]]]]],[0,31,0,0,0,0,0,0,[1,16294,546],[[0,21,8,0,22,32,0,24,[1,16295,545],[[16297,2,33]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*Open EGX X-stream Workstation and Login","*ValueError: Invalid key: win","*Open Application","*${APP_NAME}","*Press Keys","*RPA.Desktop","*<p>Press multiple keys down simultaneously.\x3c/p>","*win, text=${app_name}","*ENTER","*Wait Until Window Is Ready","*Click Element","*locator=type_in_your_username_locator","*Type Text","*<p>Type text one letter at a time.\x3c/p>","*locator=type_in_your_username_locator, text=your_username","*locator=type_in_your_password_locator","*locator=type_in_your_password_locator, text=your_password","*locator=login_button_locator","*Wait Until Element Is Visible","*locator=dashboard_locator, timeout=10s","*Capture Screenshot","*login_successful.png"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify\x3c/p>","*Open EGX X-stream Workstation desktop application and play a song","*Open the EGX X-stream Workstation desktop application","*Windows Search","*RPA.Windows","*<p>Use Windows search window to launch application.\x3c/p>","*EGX X-stream Workstation","*window","*Sending keys '{Win}' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Sending keys 'EGX X-stream Workstation' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Sending keys '{Enter}' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*Search for the song","*Send Keys","*<p>Send keys to desktop, current window or to Control element defined by given locator.\x3c/p>","*keys={CTRL}l","*action, keyboard","*Sending keys '{CTRL}l' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*keys=${USER_NAME}","*Sending keys '01001a' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Select the song","*keys={ENTER}{TAB}{ENTER}","*Sending keys '{ENTER}{TAB}{ENTER}' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;","*Play the song","*keys={ENTER}","*Sending keys '{ENTER}' to element: &lt;module 'uiautomation' from 'c:\\\\ProgramData\\\\robocorp\\\\ht\\\\86584fa_b1f3c24_6133770e\\\\lib\\\\site-packages\\\\uiautomation\\\\__init__.py'&gt;"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:02","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721561732868;
+window.output["baseMillis"] = 1721646801147;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 2195;
+window.output["generated"] = 16858;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":true,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
