--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,16843],[],[[5,0,0,[],[1,437,16403],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,23076],[],[[5,0,0,[],[0,288,22785,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify\x3c/p>","*Open EGX X-stream Workstation desktop application and play a song"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify\x3c/p>","*Open EGX X-stream Workstation desktop application and play a song","*ElementNotFound: Element not found with locator 'id:ListViewSubItem-2'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Tasks","name":"Tasks","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:23","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:23","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721646801147;
+window.output["baseMillis"] = 1721649119573;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16858;
+window.output["generated"] = 23091;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
