--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,31209],[],[[5,0,0,[],[0,329,30876,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,31188],[],[[5,0,0,[],[0,322,30864,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify\x3c/p>","*Open EGX X-stream Workstation desktop application and play a song","*Keyword '${SECURITY_LOCATOR}' failed after retrying 10 times. The last error was: No keyword with name 'name:ListViewSubItem' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify\x3c/p>","*Open EGX X-stream Workstation desktop application","*Keyword '${SECURITY_LOCATOR}' failed after retrying 10 times. The last error was: No keyword with name 'name:ListViewSubItem' found."]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:31","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:31","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721651918821;
+window.output["baseMillis"] = 1721652073471;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 31225;
+window.output["generated"] = 31214;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
