modified:   log.html 	modified:   output.xml 	modified:   report.html 	modified:   tasks.robot

--- a/report.html
+++ b/report.html
@@ -1629,28 +1629,28 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,28840],[],[[5,0,0,[],[0,308,28531,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,35065],[],[[5,0,0,[],[0,1171,33891,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>Spotify Windows desktop application robot. Opens the Spotify\x3c/p>","*Open EGX X-stream Workstation desktop application","*ElementNotFound: Element not found with locator 'name:EGMFC001MM19'"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>EGX X-stream Workstation desktop application robot. Opens the EGX X-stream Workstation and performs tasks.\x3c/p>","*Open EGX X-stream Workstation desktop application and perform actions","*Keyword 'Element Should Be Present' failed after retrying 10 times. The last error was: ValueError: Unknown locator type: name"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:29","fail":1,"label":"All Tasks","pass":0,"skip":0}],[],[{"elapsed":"00:00:29","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:35","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721652731029;
+window.output["baseMillis"] = 1721653969507;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28858;
+window.output["generated"] = 35085;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"background":{"fail":"#f66","pass":"#9e9","skip":"#fed84f"},"logURL":"log.html","rpa":true,"title":""};
+window.settings = {"background":{"fail":"#f66","pass":"#9e9","skip":"#fed84f"},"logURL":"log.html","rpa":false,"title":""};
 </script>
 <title></title>
 </head>
