--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,16968],[],[[5,0,0,[],[0,1163,15801,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,17028],[],[[5,0,0,[],[0,1267,15760,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>EGX X-stream Workstation desktop application robot. Opens the EGX X-stream Workstation and performs tasks.\x3c/p>","*Open EGX X-stream Workstation desktop application and perform actions","*ValueError: Argument 'timeout' got value '30s' that cannot be converted to float or None."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tasks","*c:\\Users\\dell\\Desktop\\Ea\\example-windows-desktop-app-robot\\tasks.robot","eNqtzEEKgCAQRuGrhHv791JuqiN0gAlHEi3FEer4QV2h3YMP3kDdXtmPyofEBsBksApXgeOUMLPElgsWAt90lMT6CqfLl2j3kaZSdM1bbmgkUfq3lf33N4DsA02qPZo=","*<p>EGX X-stream Workstation desktop application robot. Opens the EGX X-stream Workstation and performs tasks.\x3c/p>","*Open EGX X-stream Workstation desktop application and perform actions","*ValueError: Unknown locator type: id"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"Tasks","name":"Tasks","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721732353610;
+window.output["baseMillis"] = 1721732901788;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16990;
+window.output["generated"] = 17046;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
